--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: kifiya_daynamic_form_engine
 description: "A new Flutter project."
 version: 0.0.1
-homepage:
+homepage: https://github.com/AsratAdane/kifiya_dynamic_form_render_engine
 
 environment:
   sdk: ^3.9.0
@@ -11,12 +11,16 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^3.0.3
-  freezed: ^3.2.3
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  freezed: ^3.2.3
+  build_runner: ^2.7.1
+  json_serializable: ^6.11.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
