--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^3.0.3
   freezed_annotation: ^3.1.0
+  intl: ^0.20.2
   json_annotation: ^4.9.0
 
 dev_dependencies:
